--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<html>
-    <head>
-        <title> Mak coin</title>
+<head>
+    <title>My awesome web page</title>
+    
     </head>
-
-    <body>
-        Some content.
-    </body>
-</html>
