--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
       <title>My awesome web page</title>
       <h1> hi </h1>
+      <img src="https://octodex.github.com/images/vinyltocat.png">
     
     </head>
